# my_loan_plugin

./: MANIFEST.in  README.md  setup.py
my_loan_plugin/: __init__.py  models.py  plugin.py  pyproject.toml  setup.py  urls.py  views.py
my_loan_plugin/my_loan_plugin/: admin.py  apps.py
my_loan_plugin/my_loan_plugin/templates/my_loan_plugin/: loan_list.html
my_loan_plugin/templates/my_loan_plugin/: loan_agreement.html  loan_request.html
static/my_loan_plugin/: loan.css
