[project]
name = "my_loan_plugin"
version = "1.0.0"
description = "A plugin to manage item loans in InvenTree."
authors = [
    { name = "Jan Schüler", email = "jandeluxe96@gmail.com" }
]
requires-python = ">=3.7"
dependencies = []

[project.entry-points."inventree_plugins"]
MyLoanPlugin = "my_loan_plugin.plugin:MyLoanPlugin"
